# WST

./: Cargo.toml  wst.toml
apps/wst-ui/: Cargo.toml
apps/wst-ui/src/: builtin.rs  main.rs
crates/wst-backend/: Cargo.toml
crates/wst-backend/src/: conpty.rs  lib.rs
crates/wst-config/src/: lib.rs
crates/wst-core/src/: lib.rs
crates/wst-daemon/: Cargo.toml
crates/wst-daemon/src/: hotkey.rs  lib.rs  main.rs
crates/wst-protocol/src/: lib.rs
crates/wst-session/src/: manager.rs
docs/: bugfix-log.md
