[package]
name = "wst-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
encoding_rs = "0.8"

wst-protocol = { path = "../wst-protocol" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Globalization"] }
